@@ -252,7 +252,7 @@ Number Protocol
 
 .. cfunction:: PyObject* PyNumber_Index(PyObject *o)
 
-   Returns the *o* converted to a Python int or long on success or *NULL* with a
+   Returns the *o* converted to a Python int on success or *NULL* with a
    :exc:`TypeError` exception raised on failure.
 
 
@@ -268,7 +268,7 @@ Number Protocol
 .. cfunction:: Py_ssize_t PyNumber_AsSsize_t(PyObject *o, PyObject *exc)
 
    Returns *o* converted to a Py_ssize_t value if *o* can be interpreted as an
-   integer. If *o* can be converted to a Python int or long but the attempt to
+   integer. If *o* can be converted to a Python int but the attempt to
    convert to a Py_ssize_t value would raise an :exc:`OverflowError`, then the
    *exc* argument is the type of exception that will be raised (usually
    :exc:`IndexError` or :exc:`OverflowError`).  If *exc* is *NULL*, then the
