@@ -2111,7 +2111,7 @@ static PyNumberMethods delta_as_number = {
 	0,					/*nb_xor*/
 	0,					/*nb_or*/
 	0,					/*nb_int*/
-	0,					/*nb_long*/
+	0,					/*nb_reserved*/
 	0,					/*nb_float*/
 	0,					/*nb_inplace_add*/
 	0,					/*nb_inplace_subtract*/
